styling for login done. changed stylling. MVP complete

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,8 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: rgb(235, 250, 235);">
+  <body style="background: radial-gradient(circle, rgba(201,179,59,1) 0%, rgba(245,229,118,1) 35%, rgba(194,159,55,1) 100%);">
+  <!-- <body style="background-color: rgb(235, 250, 235);"> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
