--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Magic: The Gathering Price Tracker</title>
   </head>
   <body style="background: radial-gradient(circle, rgba(201,179,59,1) 0%, rgba(245,229,118,1) 35%, rgba(194,159,55,1) 100%);">
   <!-- <body style="background-color: rgb(235, 250, 235);"> -->
